# whisper-agent

./: CMakeLists.txt  README.md  install.sh
assets/: whisper-agent.desktop
cmake/: BuildLibvterm.cmake
src/: editor_panel.cpp  editor_panel.h  file_tree_panel.cpp  file_tree_panel.h  main.cpp  main_frame.cpp  main_frame.h  terminal_panel.cpp  terminal_panel.h  transcriber.cpp  transcriber.h
